ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: streamlitweb
 labels:
   app: streamlit
spec:
 backend:
   serviceName: streamlitweb-backend
   servicePort: 8501
---
apiVersion: v1
kind: Service
metadata:
 name: streamlitweb-backend
 labels:
   app: streamlit
spec:
 type: NodePort
 selector:
   app: streamlit
   tier: web
 ports:
 - port: 8501
   targetPort: 8501
